--- a/drive-stats/package.json
+++ b/drive-stats/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
-    "ajv": "^6.9.1",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-label": "^1.0.0",
     "class-variance-authority": "^0.7.0",
     "lucide-react": "^0.359.0",
+    "next": "^14.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
