--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,4 +1,7 @@
-fastapi[all]==0.82.0
+fastapi>=0.89.0,<=0.92.0
 uvicorn[standard]==0.17.6
 psycopg[binary,pool]>=3.0.14
 pytest==7.2.1
+pyjwt==2.3.0
+python-decouple==3.5
+bcrypt>=3.2.0
