--- a/drive-stats/package.json
+++ b/drive-stats/package.json
@@ -22,7 +22,8 @@
     "form": "^0.2.4",
     "input": "^1.0.1",
     "lucide-react": "^0.359.0",
-    "next": "^14.1.3",
+    "navigation-menu": "^1.0.0",
+    "next": "^14.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.1",
