--- a/drive-stats/package.json
+++ b/drive-stats/package.json
@@ -10,21 +10,29 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^1.0.0",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "add": "^2.0.6",
     "class-variance-authority": "^0.7.0",
+    "form": "^0.2.4",
+    "input": "^1.0.1",
     "lucide-react": "^0.359.0",
-    "next": "^14.1.3",
+    "navigation-menu": "^1.0.0",
+    "next": "^14.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0",
+    "react-hook-form": "^7.51.1",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "shadcn-ui": "^0.8.0",
     "tailwind-merge": "^2.2.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20.11.29",
