--- a/drive-stats/package.json
+++ b/drive-stats/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "add": "^2.0.6",
+    "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "form": "^0.2.4",
     "input": "^1.0.1",
