47 implement unit tests (#49)
* Add error handling for getting a specific vehicle ID

* Implemented vehicle detail page and re-worked backend

* Updated UI to the vehicle detail page

* Added about vehicle to let users provide a short desc of their vehicle that they are creating

* Worked on maintenance log UI for the frontend

* Worked on UI and backend

* Implemented maintenance log form

* Added pre-commit, testing

* Updates to linting

* Added unit test for checking all vehicles

* Added unit test for creating a vehicle

* Reworked warnings for pytest

* Updates to the current unit tests implemented

* Fixed an issue where unit test pushing data into development.

---------

Co-authored-by: casper <ivntsng@gmail.com>

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,7 +17,7 @@ services:
             SIGNING_KEY: 2e2f446477efb5db3c21276786a5d7a431b671ab440fdf8d7e84368cc198b562
         volumes:
             - ./api:/app
-        user: "1000:1000" # Replace with your real user id and group id on macOS and Linux
+        user: "1000:1000"
 
     drive-stats:
         image: node:lts-bullseye
@@ -27,7 +27,7 @@ services:
             VITE_API_HOST: http://localhost:8000
         ports:
             - "5173:5173"
-        user: "1000:1000" # Replace with your real user id and group id on macOS and Linux
+        user: "1000:1000"
         volumes:
             - ./drive-stats:/app
 
