--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,20 +33,20 @@ jobs:
               run: |
                   echo "Waiting for FastAPI to be ready..."
                   for i in {1..10}; do
-                    docker exec fastapi curl -f http://localhost:8000/ && break || sleep 10;
+                    docker exec drive-stats_fastapi_1 curl -f http://localhost:8000/ && break || sleep 10;
                   done
 
             - name: List running containers
               run: docker ps
 
             - name: Install dependencies
-              run: docker exec fastapi pip install -r api/requirements.txt
+              run: docker exec drive-stats_fastapi_1 pip install -r api/requirements.txt
 
             - name: Lint with flake8
-              run: docker exec fastapi flake8 api
+              run: docker exec drive-stats_fastapi_1 flake8 api
 
             - name: Run tests
-              run: docker exec fastapi python -m pytest api
+              run: docker exec drive-stats_fastapi_1 python -m pytest api
 
             - name: Show Docker Compose Logs
               run: docker-compose logs
