--- a/api/Dockerfile.dev
+++ b/api/Dockerfile.dev
@@ -1,10 +1,24 @@
 FROM python:3.10-bullseye
+
+# Upgrade pip
 RUN python -m pip install --upgrade pip
+
+# Add wait script
 ADD https://github.com/ufoscout/docker-compose-wait/releases/download/2.9.0/wait /wait
 RUN chmod +x /wait
-WORKDIR /deps
-COPY requirements.txt requirements.txt
-RUN python -m pip install -r requirements.txt
+
+# Set working directory
 WORKDIR /app
-COPY . /app
-CMD /wait && python -m migrations up && uvicorn main:app --reload --host 0.0.0.0
+
+# Copy requirements and install dependencies
+COPY requirements.txt .
+RUN python -m pip install -r requirements.txt
+
+# Copy all application files
+COPY . .
+
+# Copy the flake8 configuration
+COPY .flake8 .
+
+# Run the migrations and start the FastAPI app
+CMD /wait && python -m migrations up && uvicorn main:app --reload --host 0.0.0.0 --port 8000
