--- a/api/Dockerfile.dev
+++ b/api/Dockerfile.dev
@@ -14,11 +14,11 @@ WORKDIR /app
 COPY requirements.txt .
 RUN python -m pip install -r requirements.txt
 
-# Copy the .flake8 file from the root directory
-COPY ../.flake8 /app/.flake8
-
 # Copy all application files
 COPY . .
+
+# Copy the flake8 configuration
+COPY .flake8 .
 
 # Run the migrations and start the FastAPI app
 CMD /wait && python -m migrations up && uvicorn main:app --reload --host 0.0.0.0 --port 8000
