--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -45,7 +45,7 @@ services:
             POSTGRES_USER: casper
             POSTGRES_PASSWORD: foTVdhgYZzz8bOL6e
         healthcheck:
-            test: ["CMD-SHELL", "pg_isready -U casper"]
+            test: ["CMD-SHELL", "pg_isready -U casper -d drivestats_db"]
             interval: 10s
             timeout: 5s
             retries: 5
