--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
             - name: Create Docker Volume
               run: docker volume create --name=drive-statsDB
 
-            - name: Build and start services
+            - name: Build and start services (including Flyway)
               run: docker-compose up -d
 
             - name: List running containers
@@ -43,20 +43,10 @@ jobs:
                     sleep 5
                   done
 
-            - name: Wait for Flyway to finish
+            - name: Check Flyway Logs
               run: |
-                  echo "Waiting for Flyway to finish..."
-                  until [ "`docker inspect -f {{.State.Running}} $(docker ps --filter name=flyway -q)`" == "false" ]; do
-                    echo "Flyway is still running..."
-                    sleep 5
-                  done
-                  if [ "`docker inspect -f {{.State.ExitCode}} $(docker ps --filter name=flyway -q)`" != "0" ]; then
-                    echo "Flyway migration failed!"
-                    docker logs $(docker ps --filter name=flyway -q)
-                    exit 1
-                  else
-                    echo "Flyway migration completed successfully!"
-                  fi
+                  echo "Checking Flyway logs..."
+                  docker logs $(docker ps -a --filter "name=drive-stats_flyway_1" --filter "status=exited" -q)
 
             - name: Wait for FastAPI to be ready
               run: |
