--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,14 @@ jobs:
                   done
 
             - name: Create Test Database
-              run: docker exec $(docker ps --filter name=postgres -q) psql -U casper -d postgres -c "CREATE DATABASE test_drivestats_db;"
+              run: |
+                  echo "Checking if test database exists..."
+                  if ! docker exec $(docker ps --filter name=postgres -q) psql -U casper -d postgres -tAc "SELECT 1 FROM pg_database WHERE datname='test_drivestats_db'" | grep -q 1; then
+                    echo "Creating test database..."
+                    docker exec $(docker ps --filter name=postgres -q) psql -U casper -d postgres -c "CREATE DATABASE test_drivestats_db;"
+                  else
+                    echo "Test database already exists."
+                  fi
 
             - name: Check Flyway Logs
               run: |
@@ -75,14 +82,15 @@ jobs:
             - name: Run tests
               env:
                   DATABASE_URL: "postgresql://casper:foTVdhgYZzz8bOL6e@postgres/test_drivestats_db"
+                  SIGNING_KEY: "2e2f446477efb5db3c21276786a5d7a431b671ab440fdf8d7e84368cc198b562" # Ensure the signing key is set
               run: docker exec $(docker ps --filter name=fastapi -q) python -m pytest /app
 
             - name: Drop Test Database
-              run: docker exec $(docker ps --filter name=postgres -q) psql -U casper -d postgres -c "DROP DATABASE test_drivestats_db;"
+              run: docker exec $(docker ps --filter name=postgres -q) psql -U casper -d postgres -c "DROP DATABASE IF EXISTS test_drivestats_db;"
 
             - name: Cleanup
               run: docker-compose down
 
         env:
             DATABASE_URL: "postgresql://casper:foTVdhgYZzz8bOL6e@postgres/drivestats_db"
-            SIGNING_KEY: "2e2f446477efb5db3c21276786a5d7a431b671ab440fdf8d7e84368cc198b562"
+            SIGNING_KEY: "2e2f446477efb5db3c21276786a5d7a431b671ab440fdf8d7e84368cc198b562" # Ensure the signing key is set
