Setup local development env

--- a/api/Dockerfile.dev
+++ b/api/Dockerfile.dev
@@ -1,24 +1,24 @@
+# Dockerfile.dev for backend
 FROM python:3.10-bullseye
 
-# Upgrade pip
-RUN python -m pip install --upgrade pip
-
-# Add wait script
-ADD https://github.com/ufoscout/docker-compose-wait/releases/download/2.9.0/wait /wait
-RUN chmod +x /wait
-
-# Set working directory
+# Set the working directory in the container
 WORKDIR /app
 
-# Copy requirements and install dependencies
+# Copy the requirements file into the container
 COPY requirements.txt .
-RUN python -m pip install -r requirements.txt
 
-# Copy all application files
+# Install any dependencies
+RUN pip install --no-cache-dir -r requirements.txt
+
+# Copy the current directory contents into the container at /app
 COPY . .
 
-# Copy the flake8 configuration
-COPY .flake8 .
+# Copy SSL certificates
+COPY self-signed-cert/cert.pem /app/cert.pem
+COPY self-signed-cert/key.pem /app/key.pem
 
-# Run the migrations and start the FastAPI app
-CMD /wait && python -m migrations up && uvicorn main:app --reload --host 0.0.0.0 --port 8000
+# Expose port 8000 to the outside world
+EXPOSE 8000
+
+# Command to run the application
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--ssl-keyfile", "/app/key.pem", "--ssl-certfile", "/app/cert.pem"]
