--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -12,7 +12,7 @@ services:
 
     flyway:
         image: flyway/flyway
-        command: -url=jdbc:postgresql://postgres:5432/drivestats_db -user=casper -password=foTVdhgYZzz8bOL6e -locations=filesystem:/flyway/sql migrate
+        command: -url=jdbc:postgresql://postgres:5432/drivestats_db -user=casper -password=foTVdhgYZzz8bOL6e -locations=filesystem:/sql migrate
         volumes:
             - ./api/sql:/flyway/sql
         depends_on:
@@ -21,12 +21,12 @@ services:
     backend:
         build:
             context: ./api
-            dockerfile: Dockerfile.prod
+            dockerfile: Dockerfile.dev
         environment:
             SIGNING_KEY: 06b261ced90b876af6e6e5834da0ca740f5b1e2e432988f129cab2eb95dcb11d
             ALGORITHM: HS256
-            VITE_API_HOST: http://localhost:8000 # Backend EC2 IP
-            CORS_HOST: http://localhost # Frontend EC2 IP
+            VITE_API_HOST: https://localhost:8000
+            CORS_HOST: https://localhost
             DATABASE_URL: postgresql://casper:foTVdhgYZzz8bOL6e@postgres:5432/drivestats_db
         ports:
             - "8000:8000"
