--- a/drive-stats/Dockerfile.dev
+++ b/drive-stats/Dockerfile.dev
@@ -22,14 +22,18 @@ FROM nginx:alpine
 # Copy the built application from the previous stage
 COPY --from=build /app/dist /usr/share/nginx/html
 
-# Copy assets directory
-COPY assets /usr/share/nginx/html/assets
-
 # Copy custom nginx configuration
 COPY dev_nginx.conf /etc/nginx/nginx.conf
 
-# Expose port 80
-EXPOSE 80
+# Copy assets directory
+COPY assets /usr/share/nginx/html/assets
+
+# Copy SSL certificates
+COPY self-signed-cert/selfsigned.crt /etc/nginx/conf.d/selfsigned.crt
+COPY self-signed-cert/selfsigned.key /etc/nginx/conf.d/selfsigned.key
+
+# Expose port 80 and 443
+EXPOSE 80 443
 
 # Start nginx
 CMD ["nginx", "-g", "daemon off;"]
