--- a/drive-stats/dev_nginx.conf
+++ b/drive-stats/dev_nginx.conf
@@ -13,8 +13,19 @@ http {
 
     server {
         listen 80;
+        server_name localhost;
 
-        server_name _;
+        location / {
+            return 301 https://$host$request_uri;
+        }
+    }
+
+    server {
+        listen 443 ssl;
+        server_name localhost;
+
+        ssl_certificate /etc/nginx/conf.d/selfsigned.crt;
+        ssl_certificate_key /etc/nginx/conf.d/selfsigned.key;
 
         root /usr/share/nginx/html;
         index index.html;
@@ -31,7 +42,7 @@ http {
         }
 
         location /api/ {
-            proxy_pass http://localhost:8000;  # Point to local backend
+            proxy_pass http://localhost:8000;  # Use your local backend server IP and port
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
