Awaiting on SSL from Frontend

--- a/api/Dockerfile.prod
+++ b/api/Dockerfile.prod
@@ -1,20 +1,23 @@
-# Use the official Python image from the Docker Hub
-FROM python:3.10-bullseye
+# Use an official Python runtime as a base image
+FROM python:3.9-slim
 
 # Set the working directory in the container
 WORKDIR /app
 
-# Copy the requirements file into the container
-COPY requirements.txt .
+# Copy the current directory contents into the container at /app
+COPY . /app
 
-# Install any dependencies
+# Install any needed packages specified in requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the current directory contents into the container at /app
 COPY . .
 
-# Expose port 8000 to the outside world
+# Copy SSL certificates
+COPY ssl/fullchain.pem /etc/ssl/certs/fullchain.pem
+COPY ssl/privkey.pem /etc/ssl/private/privkey.pem
+
+# Expose port 8000
 EXPOSE 8000
 
-# Command to run the application using Uvicorn with Gunicorn
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Run the Uvicorn server with SSL
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--ssl-keyfile", "/etc/ssl/private/privkey.pem", "--ssl-certfile", "/etc/ssl/certs/fullchain.pem"]
