--- a/drive-stats/dev_nginx.conf
+++ b/drive-stats/dev_nginx.conf
@@ -42,7 +42,7 @@ http {
         }
 
         location /api/ {
-            proxy_pass http://localhost:8000;  # Use your local backend server IP and port
+            proxy_pass https://localhost:8000;  # Use your local backend server IP and port with HTTPS
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
