Updated SSL and fully deployed backend

--- a/api/Dockerfile.prod
+++ b/api/Dockerfile.prod
@@ -1,23 +1,24 @@
 # Use an official Python runtime as a base image
-FROM python:3.9-slim
+FROM python:3.10-bullseye
 
 # Set the working directory in the container
 WORKDIR /app
 
-# Copy the current directory contents into the container at /app
-COPY . /app
+# Copy the requirements file into the container
+COPY requirements.txt .
 
 # Install any needed packages specified in requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Copy the rest of the application code into the container
 COPY . .
 
 # Copy SSL certificates
 COPY ssl/fullchain.pem /etc/ssl/certs/fullchain.pem
 COPY ssl/privkey.pem /etc/ssl/private/privkey.pem
 
-# Expose port 8000
-EXPOSE 8000
+# Expose port 443
+EXPOSE 443
 
 # Run the Uvicorn server with SSL
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--ssl-keyfile", "/etc/ssl/private/privkey.pem", "--ssl-certfile", "/etc/ssl/certs/fullchain.pem"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "443", "--ssl-keyfile", "/etc/ssl/private/privkey.pem", "--ssl-certfile", "/etc/ssl/certs/fullchain.pem"]
