Reworked frontend for production

--- a/drive-stats/nginx.conf
+++ b/drive-stats/nginx.conf
@@ -13,7 +13,7 @@ http {
 
     # Redirect HTTP to HTTPS
     server {
-        listen 80;  # Change to port 80 to capture HTTP requests
+        listen 80;
         server_name drivestatsapp.com www.drivestatsapp.com;
 
         location / {
@@ -26,8 +26,8 @@ http {
         listen 443 ssl;
         server_name drivestatsapp.com www.drivestatsapp.com;
 
-        ssl_certificate /etc/nginx/conf.d/fullchain.pem;
-        ssl_certificate_key /etc/nginx/conf.d/privkey.pem;
+        ssl_certificate /etc/nginx/ssl/fullchain.pem;
+        ssl_certificate_key /etc/nginx/ssl/privkey.pem;
 
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_prefer_server_ciphers on;
@@ -59,7 +59,7 @@ http {
         }
 
         location /api/ {
-            proxy_pass http://18.144.80.250:8000;  # Replace with your backend server IP and port
+            proxy_pass https://api.drivestatsapp.com;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
