--- a/drive-stats/Dockerfile.prod
+++ b/drive-stats/Dockerfile.prod
@@ -22,17 +22,21 @@ FROM nginx:alpine
 # Copy the built application from the previous stage
 COPY --from=build /app/dist /usr/share/nginx/html
 
+# Copy assets directory
 COPY assets /usr/share/nginx/html/assets
 
 # Copy custom nginx configuration
 COPY nginx.conf /etc/nginx/nginx.conf
 
-# Copy SSL certificates
-COPY ssl/fullchain.pem /etc/nginx/conf.d/fullchain.pem
-COPY ssl/privkey.pem /etc/nginx/conf.d/privkey.pem
+# Create directory for SSL certificates
+RUN mkdir -p /etc/nginx/ssl
 
-# Expose port 8080 and 443
-EXPOSE 8080 443
+# Copy SSL certificates
+COPY ssl/fullchain.pem /etc/nginx/ssl/fullchain.pem
+COPY ssl/privkey.pem /etc/nginx/ssl/privkey.pem
+
+# Expose ports 80 and 443
+EXPOSE 80 443
 
 # Start nginx
 CMD ["nginx", "-g", "daemon off;"]
