Added rate limiting on vehicles endpoints

--- a/drive-stats/.env.production
+++ b/drive-stats/.env.production
@@ -1,2 +1,2 @@
-VITE_API_HOST=https://api.drivestatsapp.com  # Backend URL
-CORS_HOST=https://drivestatsapp.com  # Frontend URL
+VITE_API_HOST=https://localhost:8000  # Updated to reflect HTTPS and port 443
+CORS_HOST=https://localhost  # Local frontend URL
