Added API for storing subscriber emails

--- a/api/flyway.conf
+++ b/api/flyway.conf
@@ -4,3 +4,4 @@ flyway.password=foTVdhgYZzz8bOL6e
 flyway.locations=filesystem:/flyway/sql
 flyway.baselineOnMigrate=true
 flyway.validateMigrationNaming=true
+flyway.cleanDisabled=false
