--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -25,6 +25,7 @@ orjson==3.9.12
 packaging==23.2
 pluggy==1.4.0
 psycopg==3.1.17
+psycopg2==2.9.9
 psycopg-binary==3.1.17
 psycopg-pool==3.2.1
 pyasn1==0.5.1
