--- a/drive-stats/.env.production
+++ b/drive-stats/.env.production
@@ -1,4 +1,4 @@
 # VITE_API_HOST=https://api.drivestatsapp.com  # Updated to reflect HTTPS and port 443
 # CORS_HOST=https://drivestatsapp.com  # Local frontend URL
-VITE_API_HOST=https://localhost:8000  # Updated to reflect HTTPS and port 443
-CORS_HOST=https://localhost  # Local frontend URL
+VITE_API_HOST=http://localhost:8000  # Updated to reflect HTTPS and port 443
+CORS_HOST=http://localhost  # Local frontend URL
