--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -14,9 +14,14 @@ services:
 
     flyway:
         image: flyway/flyway
-        command: -url=jdbc:postgresql://postgres:5432/drivestats_db -user=casper -password=foTVdhgYZzz8bOL6e -locations=filesystem:/flyway/sql migrate
+        command: migrate
         volumes:
             - ./sql:/flyway/sql
+        environment:
+            FLYWAY_URL: jdbc:postgresql://postgres:5432/drivestats_db
+            FLYWAY_USER: casper
+            FLYWAY_PASSWORD: foTVdhgYZzz8bOL6e
+            FLYWAY_LOCATIONS: filesystem:/flyway/sql
         depends_on:
             - postgres
         networks:
@@ -45,8 +50,11 @@ services:
             context: ./drive-stats
             dockerfile: Dockerfile.dev
         ports:
-            - "80:80"
-            - "443:443"
+            - "5173:5173" # Vite default dev port
+        volumes:
+            - ./drive-stats:/app # Mount the frontend source code
+        environment:
+            CHOKIDAR_USEPOLLING: "true" # Enable polling for file changes if necessary
         networks:
             - app-network
 
