--- a/drive-stats/package.json
+++ b/drive-stats/package.json
@@ -15,18 +15,23 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^1.0.0",
     "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "add": "^2.0.6",
     "axios": "^1.7.2",
+    "calendar": "^0.1.1",
     "class-variance-authority": "^0.7.0",
+    "date-fns": "^3.6.0",
     "form": "^0.2.4",
     "input": "^1.0.1",
     "lucide-react": "^0.359.0",
     "navigation-menu": "^1.0.0",
     "next": "^14.1.4",
     "react": "^18.2.0",
+    "react-datepicker": "^7.3.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.1",
     "react-router-dom": "^6.22.3",
