Backend changes & frontend UI changes

--- a/api/Dockerfile.prod
+++ b/api/Dockerfile.prod
@@ -13,12 +13,8 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy the rest of the application code into the container
 COPY . .
 
-# Copy SSL certificates
-COPY ssl/fullchain.pem /etc/ssl/certs/fullchain.pem
-COPY ssl/privkey.pem /etc/ssl/private/privkey.pem
+# Expose port 80 instead of 443, since SSL is handled by the ALB
+EXPOSE 80
 
-# Expose port 443
-EXPOSE 443
-
-# Run the Uvicorn server with SSL
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "443", "--ssl-keyfile", "/etc/ssl/private/privkey.pem", "--ssl-certfile", "/etc/ssl/certs/fullchain.pem"]
+# Run the Uvicorn server on HTTP
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "80"]
