--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,10 +12,10 @@ services:
         ports:
             - "8000:8000"
         environment:
-            CORS_HOST: http://localhost:5173
-            DATABASE_URL: postgresql://casper:foTVdhgYZzz8bOL6e@postgres:5432/drivestats_db
-            SIGNING_KEY: 2e2f446477efb5db3c21276786a5d7a431b671ab440fdf8d7e84368cc198b562
-            VITE_API_HOST: localhost:8000
+            CORS_HOST: ${CORS_HOST}
+            DATABASE_URL: ${DATABASE_URL}
+            SIGNING_KEY: ${SIGNING_KEY}
+            VITE_API_HOST: ${VITE_API_HOST}
         volumes:
             - ./api:/app
         depends_on:
@@ -30,7 +30,7 @@ services:
         command: /bin/bash run.sh
         working_dir: /app
         environment:
-            VITE_API_HOST: http://localhost:8000
+            VITE_API_HOST: ${VITE_API_HOST}
         ports:
             - "5173:5173"
         user: "1000:1000"
@@ -44,11 +44,15 @@ services:
         volumes:
             - drive-statsDB:/var/lib/postgresql/data
         environment:
-            POSTGRES_DB: drivestats_db
-            POSTGRES_USER: casper
-            POSTGRES_PASSWORD: foTVdhgYZzz8bOL6e
+            POSTGRES_DB: ${POSTGRES_DB}
+            POSTGRES_USER: ${POSTGRES_USER}
+            POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
         healthcheck:
-            test: ["CMD-SHELL", "pg_isready -U casper -d drivestats_db"]
+            test:
+                [
+                    "CMD-SHELL",
+                    "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}",
+                ]
             interval: 10s
             timeout: 5s
             retries: 5
